// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Glyph /> renders diagonal fraction 1`] = `
<span
  className="inline-0-0-2-2"
>
  1/3
</span>
`;

exports[`<Glyph /> renders normal by default 1`] = `
<span
  className="inline-0-0-2-1"
>
  Text
</span>
`;

exports[`<Glyph /> renders ordinal suffix 1`] = `
<span
  className="inline-0-0-2-4"
>
  1st
</span>
`;

exports[`<Glyph /> renders slashed zero 1`] = `
<span
  className="inline-0-0-2-5"
>
  100
</span>
`;

exports[`<Glyph /> renders stacked fraction 1`] = `
<span
  className="inline-0-0-2-3"
>
  1/3
</span>
`;

exports[`<Glyph /> renders tabular numbers 1`] = `
<span
  className="inline-0-0-2-6"
>
  123.45
</span>
`;
